--- a/app.json
+++ b/app.json
@@ -17,11 +17,11 @@
         },
         "CONFIGCADDY": {
             "description": "自定义网络地址读取配置运行CADDY，不熟悉CADDY配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/wh5eqfftktk/long22/master/etc/Caddyfile"
+            "value": "https://raw.githubusercontent.com/wh5eqfftktk/long-oo22/master/etc/Caddyfile"
         },
         "CONFIGXRAY": {
             "description": "自定义网络地址读取配置运行xray，不熟悉xray配置的请勿修改",
-            "value": "https://raw.githubusercontent.com/wh5eqfftktk/long22/master/etc/xray.json"
+            "value": "https://raw.githubusercontent.com/wh5eqfftktk/long-oo22/master/etc/xray.json"
         },
         "ParameterSSENCYPT": {
             "description": "SS加密方式，查看支持协议: https://www.v2fly.org/config/protocols/shadowsocks.html",
@@ -29,10 +29,10 @@
         },
         "StoreFiles": {
             "description": "自定义网络地址读取存储文件列表",
-            "value": "https://raw.githubusercontent.com/kaiedkf23/task/master/etc/StoreFiles"
+            "value": "https://raw.githubusercontent.com/wh5eqfftktk/long-oo22/master/etc/StoreFiles"
         }
     },
-    "website": "https://github.com/kaiedkf23/task",
-    "repository": "https://github.com/kaiedkf23/task",
+    "website": "https://github.com/wh5eqfftktk/long-oo22",
+    "repository": "https://github.com/wh5eqfftktk/long-oo22",
     "stack": "container"
 }
